fixed overlapping symbols on upper left corner of page

--- a/css/site.css
+++ b/css/site.css
@@ -263,3 +263,16 @@ img.borderRad {
   /* example: text-shadow: 0px 0px 5px #fff, 0px 0px 7px #fff; */
   text-shadow: 0px 0px 10px #fff
 }
+
+.overlappingSymbols {
+  position: absolute;
+  left: 20px;
+  top: 50px;
+  z-index: 1; /* the z-index controls what gets overlapped, -1 goes 'into' the page */
+  font-size: 6.5em;
+  color: #fff;
+  letter-spacing: -7px;
+  font-weight: 70;
+  text-shadow: 0px 0px 10px #fff
+
+}
